--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Terraform
 .terraform/
 .terraform.lock.hcl.backup
+terraform.tfvars
 terraform.tfstate
 terraform.tfstate.backup
 .terraform.tfstate.lock.info
