feat: create partial backend configuration files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "files.readonlyInclude": {
         ".terraform.lock.hcl": true,
+    },
+    "files.associations": {
+        "*.tfbackend": "terraform"
     }
 }
