ci: make general workflow run more frequently

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,13 +2,9 @@ name: CI
 
 on:
   push:
-    paths:
-      - "**.tf"
-      - ".github/scripts/validate.sh"
+    branches:
+      - main
   pull_request:
-    paths:
-      - "**.tf"
-      - ".github/scripts/validate.sh"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
