--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
     # Only run if the CI workflow was successful
     if: github.event.workflow_run.conclusion == 'success'
     outputs:
-      services: ${{ steps.changes.outputs.services }}
+      matrix: ${{ steps.build-matrix.outputs.matrix }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -38,28 +38,40 @@ jobs:
           dir_names_exclude_current_dir: true
           json: true
 
-        # This returns services/service_name, trim to service_name
-      - name: Set outputs
-        id: changes
+      - name: Get changed environments
+        id: changed-environments
+        uses: tj-actions/changed-files@v46
+        with:
+          files: environments/*.tfvars
+          json: true
+
+      - name: Build deployment matrix
+        id: build-matrix
         run: |
+          # Set default values if no changes detected
+          CHANGED_SERVICES='[]'
           if [ "${{ steps.changed-services.outputs.any_changed }}" = "true" ]; then
-            SERVICES=$(echo '${{ toJSON(steps.changed-services.outputs.all_changed_files) }}' | jq -c 'map(split("/")[1])')
-            echo "services=$SERVICES" >> $GITHUB_OUTPUT
-          else
-            echo "services=[]" >> $GITHUB_OUTPUT
+            CHANGED_SERVICES='${{ steps.changed-services.outputs.all_changed_files }}'
           fi
+          
+          CHANGED_ENVIRONMENTS='[]'
+          if [ "${{ steps.changed-environments.outputs.any_changed }}" = "true" ]; then
+            CHANGED_ENVIRONMENTS='${{ steps.changed-environments.outputs.all_changed_files }}'
+          fi
+          
+          # Build matrix using the script
+          MATRIX=$(.github/scripts/build-matrix.sh "$CHANGED_SERVICES" "$CHANGED_ENVIRONMENTS")
+          echo "matrix=$MATRIX" >> $GITHUB_OUTPUT
 
   plan:
     name: Plan (${{ matrix.service }}, ${{ matrix.environment }})
     runs-on: ubuntu-latest
     needs: detect-changes
-    if: needs.detect-changes.outputs.services != '[]'
+    if: needs.detect-changes.outputs.matrix != '{"include":[]}'
     # Use GitHub environments for secrets and approval gates
     environment: ${{ matrix.environment }}
     strategy:
-      matrix:
-        service: ${{ fromJson(needs.detect-changes.outputs.services) }}
-        environment: [dev, staging, prod]
+      matrix: ${{ fromJson(needs.detect-changes.outputs.matrix) }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -99,11 +111,9 @@ jobs:
     name: Apply (${{ matrix.service }}, ${{ matrix.environment }})
     runs-on: ubuntu-latest
     needs: [detect-changes, plan]
-    if: needs.detect-changes.outputs.services != '[]' && github.event.workflow_run.head_branch == 'main'
+    if: needs.detect-changes.outputs.matrix != '{"include":[]}' && github.event.workflow_run.head_branch == 'main'
     strategy:
-      matrix:
-        service: ${{ fromJson(needs.detect-changes.outputs.services) }}
-        environment: [dev, staging, prod]
+      matrix: ${{ fromJson(needs.detect-changes.outputs.matrix) }}
     environment: ${{ matrix.environment }}
     steps:
       - name: Checkout
