--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,26 @@ on:
     workflows: ["CI"]
     types:
       - completed
+  workflow_dispatch:
+    inputs:
+      services:
+        description: 'Services to deploy (comma-separated, leave empty for all)'
+        required: false
+        type: string
+        default: ''
+      environments:
+        description: 'Environments to deploy to'
+        required: true
+        type: choice
+        options:
+        - 'dev'
+        - 'staging' 
+        - 'prod'
+        - 'dev,staging'
+        - 'dev,prod'
+        - 'staging,prod'
+        - 'dev,staging,prod'
+        default: 'dev'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -19,8 +39,8 @@ jobs:
   detect-changes:
     name: Detect Changes
     runs-on: ubuntu-latest
-    # Only run if the CI workflow was successful
-    if: github.event.workflow_run.conclusion == 'success'
+    # Only run if the CI workflow was successful or if manually triggered
+    if: github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch'
     outputs:
       matrix: ${{ steps.build-matrix.outputs.matrix }}
     steps:
@@ -48,19 +68,12 @@ jobs:
       - name: Build deployment matrix
         id: build-matrix
         run: |
-          # Set default values if no changes detected
-          CHANGED_SERVICES='[]'
-          if [ "${{ steps.changed-services.outputs.any_changed }}" = "true" ]; then
-            CHANGED_SERVICES='${{ steps.changed-services.outputs.all_changed_files }}'
-          fi
+          MATRIX=$(.github/scripts/build-matrix.sh \
+            "${{ github.event.inputs.services || '' }}" \
+            "${{ github.event.inputs.environments || '' }}" \
+            "${{ steps.changed-services.outputs.all_changed_files || '[]' }}" \
+            "${{ steps.changed-environments.outputs.all_changed_files || '[]' }}")
           
-          CHANGED_ENVIRONMENTS='[]'
-          if [ "${{ steps.changed-environments.outputs.any_changed }}" = "true" ]; then
-            CHANGED_ENVIRONMENTS='${{ steps.changed-environments.outputs.all_changed_files }}'
-          fi
-          
-          # Build matrix using the script
-          MATRIX=$(.github/scripts/build-matrix.sh "$CHANGED_SERVICES" "$CHANGED_ENVIRONMENTS")
           echo "matrix=$MATRIX" >> $GITHUB_OUTPUT
 
   plan:
@@ -111,7 +124,7 @@ jobs:
     name: Apply (${{ matrix.service }}, ${{ matrix.environment }})
     runs-on: ubuntu-latest
     needs: [detect-changes, plan]
-    if: needs.detect-changes.outputs.matrix != '{"include":[]}' && github.event.workflow_run.head_branch == 'main'
+    if: needs.detect-changes.outputs.matrix != '{"include":[]}' && (github.event.workflow_run.head_branch == 'main' || github.event_name == 'workflow_dispatch')
     strategy:
       matrix: ${{ fromJson(needs.detect-changes.outputs.matrix) }}
     environment: ${{ matrix.environment }}
