style: use double quotes where relevant

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,23 +8,23 @@ on:
   workflow_dispatch:
     inputs:
       services:
-        description: 'Services to deploy (comma-separated, leave empty for all)'
+        description: "Services to deploy (comma-separated, leave empty for all)"
         required: false
         type: string
         default: ''
       environments:
-        description: 'Environments to deploy to'
+        description: "Environments to deploy to"
         required: true
         type: choice
         options:
-        - 'dev'
-        - 'staging' 
-        - 'prod'
-        - 'dev,staging'
-        - 'dev,prod'
-        - 'staging,prod'
-        - 'dev,staging,prod'
-        default: 'dev'
+        - "dev"
+        - "staging" 
+        - "prod"
+        - "dev,staging"
+        - "dev,prod"
+        - "staging,prod"
+        - "dev,staging,prod"
+        default: "dev"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
