--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,26 @@ on:
     workflows: ["CI"]
     types:
       - completed
+  workflow_dispatch:
+    inputs:
+      services:
+        description: "Services to deploy (comma-separated, leave empty for all)"
+        required: false
+        type: string
+        default: ''
+      environments:
+        description: "Environments to deploy to"
+        required: true
+        type: choice
+        options:
+        - "dev"
+        - "staging"
+        - "prod"
+        - "dev,staging"
+        - "dev,prod"
+        - "staging,prod"
+        - "dev,staging,prod"
+        default: "dev"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -19,13 +39,14 @@ jobs:
   detect-changes:
     name: Detect Changes
     runs-on: ubuntu-latest
-    # Only run if the CI workflow was successful
-    if: github.event.workflow_run.conclusion == 'success'
+    # Only run if the CI workflow was successful or if manually triggered
+    if: github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch'
     outputs:
-      services: ${{ steps.changes.outputs.services }}
+      matrix: ${{ steps.build-matrix.outputs.matrix }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        # Don't need to specify fetch depth, changed-files will fetch as required
 
       - name: Get changed services
         id: changed-services
@@ -37,28 +58,32 @@ jobs:
           dir_names_exclude_current_dir: true
           json: true
 
-        # This returns services/service_name, trim to service_name
-      - name: Set outputs
-        id: changes
+      - name: Get changed environments
+        id: changed-environments
+        uses: tj-actions/changed-files@v46
+        with:
+          files: environments/*.tfvars
+          json: true
+
+      - name: Build deployment matrix
+        id: build-matrix
         run: |
-          if [ "${{ steps.changed-services.outputs.any_changed }}" = "true" ]; then
-            SERVICES=$(echo '${{ steps.changed-services.outputs.all_changed_files }}' | jq -c 'map(split("/")[1])')
-            echo "services=$SERVICES" >> $GITHUB_OUTPUT
-          else
-            echo "services=[]" >> $GITHUB_OUTPUT
-          fi
+          MATRIX=$(.github/scripts/build-matrix.sh \
+            "${{ github.event.inputs.services || '' }}" \
+            "${{ github.event.inputs.environments || '' }}" \
+            "${{ steps.changed-services.outputs.all_changed_files || '[]' }}" \
+            "${{ steps.changed-environments.outputs.all_changed_files || '[]' }}")
+          echo "matrix=$MATRIX" >> $GITHUB_OUTPUT
 
   plan:
     name: Plan (${{ matrix.service }}, ${{ matrix.environment }})
     runs-on: ubuntu-latest
     needs: detect-changes
-    if: needs.detect-changes.outputs.services != '[]'
+    if: needs.detect-changes.outputs.matrix != '{"include":[]}'
     # Use GitHub environments for secrets and approval gates
     environment: ${{ matrix.environment }}
     strategy:
-      matrix:
-        service: ${{ fromJson(needs.detect-changes.outputs.services) }}
-        environment: [dev, staging, prod]
+      matrix: ${{ fromJson(needs.detect-changes.outputs.matrix) }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -98,11 +123,9 @@ jobs:
     name: Apply (${{ matrix.service }}, ${{ matrix.environment }})
     runs-on: ubuntu-latest
     needs: [detect-changes, plan]
-    if: needs.detect-changes.outputs.services != '[]' && github.event.workflow_run.head_branch == 'main'
+    if: needs.detect-changes.outputs.matrix != '{"include":[]}' && (github.event.workflow_run.head_branch == 'main' || github.event_name == 'workflow_dispatch')
     strategy:
-      matrix:
-        service: ${{ fromJson(needs.detect-changes.outputs.services) }}
-        environment: [dev, staging, prod]
+      matrix: ${{ fromJson(needs.detect-changes.outputs.matrix) }}
     environment: ${{ matrix.environment }}
     steps:
       - name: Checkout
@@ -136,4 +159,4 @@ jobs:
 
       - name: Apply OpenTofu
         working-directory: services/${{ matrix.service }}
-        run: tofu apply tfplan
+        run: tofu apply -auto-approve tfplan
